@@ -117,7 +117,7 @@ bonobo_zoomable_frame_init (BonoboZoomableFrame *zoomable)
 }
 
 BONOBO_TYPE_FUNC_FULL (BonoboZoomableFrame, Bonobo_ZoomableFrame,
-		       BONOBO_TYPE_OBJECT, bonobo_zoomable_frame);
+		       BONOBO_TYPE_OBJECT, bonobo_zoomable_frame)
 
 
 /**
